# learning

./: .gitignore  README.md
blocos/: .gitignore  CMakeLists.txt  Doxyfile  config.h.in
blocos/src/: CMakeLists.txt  blocos.cpp  board.cpp  board.h  figure.cpp  figure.h  figurebolt.cpp  figurebolt.h  figurebolt2.cpp  figurebolt2.h  figureldireito.cpp  figureldireito.h  figurelesquerdo.cpp  figurelesquerdo.h  figureline.cpp  figureline.h  figureplus.cpp  figureplus.h  figuresquare.cpp  figuresquare.h  figuret.cpp  figuret.h  figurev.cpp  figurev.h  game.cpp  game.h  general_defs.h
criando_tetris/: .dir-locals.el  .gitignore  buttondown.css  criando_tetris.md  dexy.yaml
criando_tetris/src_passo1/: main.cpp  run_cmake_and_compile.sh
criando_tetris/src_passo2/: main.cpp  run_cmake_and_compile.sh
criando_tetris/src_passo2.5/: main.cpp
criando_tetris/src_passo3/: CMakeLists.txt  general_defs.h  general_defs.hpp  main.cpp
criando_tetris/src_passo4/: CMakeLists.txt  main.cpp
